# packages/core/openapi.yaml
@@ -22,7 +22,7 @@ paths:
               $ref: '#/components/schemas/AuthCompleteRequestBody'
             example:
               assertionResult:
-                authenticatorData: Enim corrupti rem consequatur sapiente dolorum ut.
+                authenticatorData: Modi doloribus.
                 clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
                 credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
                 signature: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
@@ -150,7 +150,7 @@ paths:
                     appid: https://loalhost:8443
                   rpId: https://localhost:8443/
                   timeout: 5000
-                  userVerification: discouraged
+                  userVerification: required
                 crossAuthMethods:
                   - otp
                   - otp:sms
@@ -821,7 +821,7 @@ paths:
               $ref: '#/components/schemas/MfaPasskeyAuthRequestBody'
             example:
               assertionResult:
-                authenticatorData: Enim corrupti rem consequatur sapiente dolorum ut.
+                authenticatorData: Modi doloribus.
                 clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
                 credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
                 signature: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
@@ -929,7 +929,7 @@ paths:
             example:
               creationResult:
                 attestationObject: 5lvuZBkX1w7/0+XKcldttzA7vTwilEq3qnnXSq/a0...
-                authenticatorData: Ea eos.
+                authenticatorData: Iure quisquam nesciunt.
                 clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
                 credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
                 publicKey: wDUH6JkyU7SMswFPjyqEvhMB5GlhtqzS1VtfM/91Y...
@@ -1003,7 +1003,7 @@ paths:
               $ref: '#/components/schemas/MfaPasskeyAuthRequestBody'
             example:
               assertionResult:
-                authenticatorData: Enim corrupti rem consequatur sapiente dolorum ut.
+                authenticatorData: Modi doloribus.
                 clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
                 credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
                 signature: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
@@ -1034,6 +1034,121 @@ paths:
                 msgCode: internal_error
         '401':
           description: 'unauthorized: Unauthorized response.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+              example:
+                msg: Internal error
+                msgCode: internal_error
+        '500':
+          description: 'internal_error: Internal Server Error response.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+              example:
+                msg: Internal error
+                msgCode: internal_error
+      security:
+        - sessionAuth_header_Authorization: []
+      parameters:
+        - name: Authorization
+          in: header
+          description: JWT Authorization header
+          required: false
+          schema:
+            type: string
+  /fido2/v2/mfa/payload:
+    post:
+      tags:
+        - mfa
+      summary: Update the payload to be signed using transaction confirmation.
+      description: Update the payload to be signed.
+      operationId: mfa#mfaPayloadUpdate
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MfaPayloadUpdateRequestBody'
+            example:
+              payload: ak4BXFgauyDtsRvnXWfaTW1DyetX7fTViGY9DRQGQ+g=
+      responses:
+        '200':
+          description: OK response.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MfaNext'
+              example:
+                flow: signIn
+                msg: Additional authentication is required.
+                msgCode: additional_auth_required
+                next:
+                  - action:
+                      label: Passkey
+                      name: passkey
+                    options:
+                      - name: assertionOptions
+                        value: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
+                  - action:
+                      label: External Auth
+                      name: external
+                  - action:
+                      desc: >-
+                        OTP will be sent to one of the email addresses provided
+                        by the user.
+                      label: OTP via Email
+                      name: otp:email
+                    options:
+                      - label: primary@example.com
+                        name: email:primary
+                        value: 3df8feb9-5dc0-451e-8799-ec5d7e1fe1f7
+                      - label: secondary@example.com
+                        name: email:secondary
+                        value: 9c568230-243a-43ee-8b19-7b544ba8fd9f
+                  - action:
+                      desc: >-
+                        OTP will be sent via SMS to one of the phone numbers
+                        provided by the user.
+                      label: OTP via SMS
+                      name: otp:sms
+                    options:
+                      - label: +1(631)842-0398
+                        value: ee9ce8f0-1471-47c4-b1e5-c40923aee83a
+                      - label: +1(661)942-5456
+                        value: 3e3092dc-eb0c-4064-9276-7687fe5cef57
+                session: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
+        '400':
+          description: 'bad_request: Bad Request response.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+              example:
+                msg: Internal error
+                msgCode: internal_error
+        '401':
+          description: 'unauthorized: Unauthorized response.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+              example:
+                msg: Internal error
+                msgCode: internal_error
+        '403':
+          description: 'forbidden: Forbidden response.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+              example:
+                msg: Internal error
+                msgCode: internal_error
+        '404':
+          description: 'not_found: Not Found response.'
           content:
             application/json:
               schema:
@@ -1506,7 +1621,7 @@ paths:
             example:
               creationResult:
                 attestationObject: 5lvuZBkX1w7/0+XKcldttzA7vTwilEq3qnnXSq/a0...
-                authenticatorData: Ea eos.
+                authenticatorData: Iure quisquam nesciunt.
                 clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
                 credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
                 publicKey: wDUH6JkyU7SMswFPjyqEvhMB5GlhtqzS1VtfM/91Y...
@@ -1718,7 +1833,7 @@ paths:
             schema:
               $ref: '#/components/schemas/TxCompleteRequestBody'
             example:
-              authenticatorData: Error illum.
+              authenticatorData: Sint labore temporibus incidunt libero aliquid.
               clientData: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
               keyHandle: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
               session: w5zY9tpNgePsqkTsQlNPVCR2rwUlCdhCLhVwXsN2r...
@@ -1816,7 +1931,7 @@ paths:
                     appid: https://loalhost:8443
                   rpId: https://localhost:8443/
                   timeout: 5000
-                  userVerification: discouraged
+                  userVerification: required
                 session: w5zY9tpNgePsqkTsQlNPVCR2rwUlCdhCLhVwXsN2r...
                 txId: 2a363a42-a397-4af0-b089-0935fc223017
         '400':
@@ -1981,7 +2096,7 @@ components:
           minLength: 16
       example:
         assertionResult:
-          authenticatorData: Enim corrupti rem consequatur sapiente dolorum ut.
+          authenticatorData: Modi doloribus.
           clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
           credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
           signature: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
@@ -2010,7 +2125,7 @@ components:
           type: array
           items:
             type: string
-            example: otp:sms
+            example: otp
             enum:
               - otp
               - otp:sms
@@ -2072,7 +2187,7 @@ components:
             appid: https://loalhost:8443
           rpId: https://localhost:8443/
           timeout: 5000
-          userVerification: Aut autem.
+          userVerification: Praesentium veniam sit.
         crossAuthMethods:
           - otp
           - otp:sms
@@ -2154,7 +2269,7 @@ components:
             bindings
 
             made by the authenticator.
-          example: Voluptates reiciendis ipsum et.
+          example: Doloribus eum consectetur esse ad.
         clientDataJSON:
           type: string
           description: >-
@@ -2210,7 +2325,7 @@ components:
           type: boolean
           description: Resident key requirement
           default: false
-          example: true
+          example: false
         residentKey:
           type: string
           description: Resident key requirement
@@ -2228,10 +2343,10 @@ components:
             - preferred
             - discouraged
       example:
-        authenticatorAttachment: cross-platform
-        requireResidentKey: true
-        residentKey: discouraged
-        userVerification: Aut autem.
+        authenticatorAttachment: platform
+        requireResidentKey: false
+        residentKey: required
+        userVerification: Praesentium veniam sit.
     CreationResult:
       type: object
       properties:
@@ -2250,7 +2365,7 @@ components:
             bindings
 
             made by the authenticator.
-          example: Ea in soluta quia.
+          example: Ad cum sint quos ipsam.
         clientDataJSON:
           type: string
           description: >-
@@ -2322,6 +2437,7 @@ components:
         publicKey: wDUH6JkyU7SMswFPjyqEvhMB5GlhtqzS1VtfM/91Y...
         publicKeyAlgorithm: -8
         transports:
+          - internal
           - internal
           - internal
           - internal
@@ -2524,11 +2640,11 @@ components:
             desc:
               type: string
               description: Action description
-              example: Aut eveniet nobis error id et.
+              example: Suscipit temporibus.
             label:
               type: string
               description: Human readable action label
-              example: Nihil dolor aperiam corrupti.
+              example: Corporis quis eum.
             name:
               type: string
               description: Next Action to be performed.
@@ -2542,8 +2658,8 @@ components:
                 - otp:verify
                 - external
           example:
-            desc: Quae adipisci veritatis.
-            label: Excepturi iste nulla tenetur.
+            desc: Alias similique.
+            label: Rerum natus.
             name: passkey
           required:
             - name
@@ -2561,8 +2677,8 @@ components:
       description: Next Action to be performed.
       example:
         action:
-          desc: Laudantium voluptatem.
-          label: Ut ipsam enim illo.
+          desc: Quis harum cupiditate facilis aliquam earum.
+          label: Architecto alias repellat.
           name: passkey
         options:
           - label: primary@example.com
@@ -2747,19 +2863,19 @@ components:
         label:
           type: string
           description: Human readable label
-          example: Aut vel ducimus ratione quidem ut.
+          example: Temporibus dolores ea consequuntur eos blanditiis.
         name:
           type: string
           description: Option name
-          example: Voluptate temporibus.
+          example: Architecto eum animi ut dicta assumenda.
         value:
           type: string
           description: Option value to be used in the next request
-          example: Quae aut consequuntur voluptatibus fugiat nobis cumque.
+          example: Iure dolor velit quo cupiditate voluptatibus modi.
       example:
-        label: Nihil id ea temporibus.
-        name: Qui ea qui.
-        value: Ut voluptatem quia aliquid non.
+        label: Ipsum et fugit optio ea.
+        name: Autem voluptatem voluptates.
+        value: Soluta quia.
       required:
         - value
     MfaOtpRequestRequestBody:
@@ -2813,7 +2929,7 @@ components:
           $ref: '#/components/schemas/AuthenticatorAssertionResponse'
       example:
         assertionResult:
-          authenticatorData: Enim corrupti rem consequatur sapiente dolorum ut.
+          authenticatorData: Modi doloribus.
           clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
           credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
           signature: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
@@ -2828,7 +2944,7 @@ components:
       example:
         creationResult:
           attestationObject: 5lvuZBkX1w7/0+XKcldttzA7vTwilEq3qnnXSq/a0...
-          authenticatorData: Ea eos.
+          authenticatorData: Iure quisquam nesciunt.
           clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
           credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
           publicKey: wDUH6JkyU7SMswFPjyqEvhMB5GlhtqzS1VtfM/91Y...
@@ -2838,6 +2954,17 @@ components:
             - internal
       required:
         - creationResult
+    MfaPayloadUpdateRequestBody:
+      type: object
+      properties:
+        payload:
+          type: string
+          description: Payload to be signed
+          example: ak4BXFgauyDtsRvnXWfaTW1DyetX7fTViGY9DRQGQ+g=
+      example:
+        payload: ak4BXFgauyDtsRvnXWfaTW1DyetX7fTViGY9DRQGQ+g=
+      required:
+        - payload
     MfaThirdPartyAuthVerifyRequestBody:
       type: object
       properties:
@@ -2867,7 +2994,7 @@ components:
           type: boolean
           description: Credential available on multiple devices
           default: false
-          example: false
+          example: true
         id:
           type: string
           description: Internal passkey ID that uniquely identifies a passkey
@@ -3003,6 +3130,7 @@ components:
           example:
             - internal
             - internal
+            - internal
         type:
           type: string
           description: The valid credential types.
@@ -3016,7 +3144,7 @@ components:
           - internal
           - internal
           - internal
-        type: Et ab provident.
+        type: Sed est eaque.
       required:
         - type
         - id
@@ -3025,7 +3153,7 @@ components:
       properties:
         attestation:
           type: string
-          example: none
+          example: enterprise
           enum:
             - none
             - indirect
@@ -3104,7 +3232,7 @@ components:
         user:
           $ref: '#/components/schemas/PublicKeyCredentialUserEntity'
       example:
-        attestation: Possimus et voluptas quas dolorum.
+        attestation: Nostrum et et minus aut sunt.
         authenticatorSelection:
           authenticatorAttachment: platform
           requireResidentKey: true
@@ -3152,7 +3280,7 @@ components:
             generated,
 
             e.g., RSA or Elliptic Curve.
-          example: -8
+          example: -7
           enum:
             - -7
             - -35
@@ -3168,8 +3296,8 @@ components:
             - public-key
       description: Additional parameters when creating a new credential.
       example:
-        alg: -257
-        type: Et ab provident.
+        alg: -35
+        type: Sed est eaque.
     PublicKeyCredentialRequestOptions:
       type: object
       properties:
@@ -3242,7 +3370,7 @@ components:
         userVerification:
           type: string
           description: User verification requirement
-          example: required
+          example: discouraged
           enum:
             - required
             - preferred
@@ -3261,7 +3389,7 @@ components:
           appid: https://loalhost:8443
         rpId: https://localhost:8443/
         timeout: 5000
-        userVerification: Aut autem.
+        userVerification: Praesentium veniam sit.
       required:
         - challenge
     PublicKeyCredentialRpEntity:
@@ -3323,7 +3451,7 @@ components:
       example:
         creationResult:
           attestationObject: 5lvuZBkX1w7/0+XKcldttzA7vTwilEq3qnnXSq/a0...
-          authenticatorData: Ea eos.
+          authenticatorData: Iure quisquam nesciunt.
           clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
           credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
           publicKey: wDUH6JkyU7SMswFPjyqEvhMB5GlhtqzS1VtfM/91Y...
@@ -3360,7 +3488,7 @@ components:
       example:
         action: proceed
         registrationRequestOptions:
-          attestation: Possimus et voluptas quas dolorum.
+          attestation: Nostrum et et minus aut sunt.
           authenticatorSelection:
             authenticatorAttachment: platform
             requireResidentKey: true
@@ -3534,7 +3662,7 @@ components:
           description: >-
             This attribute contains the authenticator data returned by the
             authenticator.
-          example: Aut nulla est enim.
+          example: Molestias ad exercitationem doloribus velit assumenda aut.
         clientData:
           type: string
           description: "Base64 encoded byte array which is a JSON-compatible serialization of client data\n\t\t\t\t\t\t\tpassed to the authenticator by the client in order to generate this assertion.\n\t\t\t\t\t\t\tThe exact JSON serialization MUST be preserved, as the hash of the serialized\n\t\t\t\t\t\t\tclient data has been computed over it."
@@ -3553,7 +3681,7 @@ components:
           description: Base64 encoded the raw signature returned from the authenticator.
           example: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
       example:
-        authenticatorData: Consequatur ea voluptas quasi consectetur.
+        authenticatorData: Distinctio magni.
         clientData: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
         keyHandle: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
         session: w5zY9tpNgePsqkTsQlNPVCR2rwUlCdhCLhVwXsN2r...
@@ -3594,7 +3722,7 @@ components:
             appid: https://loalhost:8443
           rpId: https://localhost:8443/
           timeout: 5000
-          userVerification: Aut autem.
+          userVerification: Praesentium veniam sit.
         session: w5zY9tpNgePsqkTsQlNPVCR2rwUlCdhCLhVwXsN2r...
         txId: 2a363a42-a397-4af0-b089-0935fc223017
       required:
